# CrewAi_api_news

./: .dockerignore  Dockerfile  README.md  api_test.py  pyproject.toml  report.json
src/myagent_news_api/: app.py  crew.py  main.py
src/myagent_news_api/config/: agents.yaml  tasks.yaml
src/myagent_news_api/tools/: custom_tool.py
